log
Fri, Mar 28, 2025 10:59:28 AM: 
 list.c | 17 +++++++++++++----
 1 file changed, 13 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'lastList':
list.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
25021aa
Fri, Mar 28, 2025 11:01:27 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
8bc3e15
Fri, Mar 28, 2025 11:11:29 AM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
1e322d4
Fri, Mar 28, 2025 11:13:26 AM: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 25/70
431c006
Fri, Mar 28, 2025 11:15:18 AM: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
ef3fad8
Fri, Mar 28, 2025 11:19:47 AM: 
 list.c | 10 +++-------
 1 file changed, 3 insertions(+), 7 deletions(-)
 tests:  5|4
total_score: 25/70
9e03385
Fri, Mar 28, 2025 11:22:37 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
3362b02
Fri, Mar 28, 2025 11:25:08 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
4a7638e
Fri, Mar 28, 2025 11:29:02 AM: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  9|3
total_score: 35/70
8acaa73
Fri, Mar 28, 2025 11:30:25 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:77:17: error: 'return' with a value, in function returning void [-Werror]
     else return NULL ;
                 ^~~~
list.c:68:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
835aa2f
Fri, Mar 28, 2025 11:31:40 AM: 
 list.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  9|3
total_score: 35/70
3a7dd84
Fri, Mar 28, 2025 11:32:29 AM: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  9|3
total_score: 35/70
f561232
Fri, Mar 28, 2025 11:41:41 AM: 
 list.c | 32 ++++++++++++++++++++++++++++++++
 1 file changed, 32 insertions(+)
 tests:  10|2
total_score: 45/70
198e36c
Fri, Mar 28, 2025 11:47:22 AM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  10|2
total_score: 45/70
8240538
Fri, Mar 28, 2025 11:49:46 AM: 
 list.c | 50 ++++++++++++++++++--------------------------------
 1 file changed, 18 insertions(+), 32 deletions(-)
 tests:  10|2
total_score: 45/70
e117a8c
Fri, Mar 28, 2025 12:00:24 PM: 
 list.c | 47 +++++++++++++++++++++++++++++++++++++----------
 1 file changed, 37 insertions(+), 10 deletions(-)
 tests:  10|2
total_score: 45/70
9e22081
